初始化一次项目

--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,10 @@ nbproject
 .tmp
 .forever
 .pm2
+
+
+################################################
+# JS Temp
+################################################
+*.js
+*.js.map
